--- a/.screenrc
+++ b/.screenrc
@@ -52,7 +52,7 @@ bindkey ^[[1;2C next
 
 # fix colorscheme in vim
 attrcolor b ".I"
-termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E38;5;%dm'
+#termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E38;5;%dm'
 defbce "on"
 
 term screen-256color
