--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".vim/pack/plugins/start/vim-puppet"]
 	path = .vim/pack/plugins/start/vim-puppet
 	url = https://github.com/rodjek/vim-puppet.git
+[submodule ".vim/pack/plugins/start/vim-terraform"]
+	path = .vim/pack/plugins/start/vim-terraform
+	url = https://github.com/hashivim/vim-terraform.git
